# mlops_exercises

./: .gitignore  data.dvc  pyproject.toml
.dvc/: config
.github/workflows/: data_check.yml  tests.yaml
s4_debugging_and_logging/exercise_files/: vae_mnist_working.py
src/mnist/: data.py  dataset_statistics.py  evaluate.py  logger.py  model.py  train.py
tests/: __init__.py  test_data.py  test_model.py
